--- a/app/src/main/res/layout/first_layout.xml
+++ b/app/src/main/res/layout/first_layout.xml
@@ -1,13 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:id ="@+id/push_button"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:text="Emergency"
+        android:layout_gravity="center"
+        android:textSize="25sp"
+        android:padding="15dp"
+        android:background="@drawable/rounded_button"
+        android:onClick="cl"
+        android:layout_marginTop="150dp"
+        android:layout_marginLeft="100dp"
+        />
+    <Button
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="First Layout"/>
+        android:text="Share Location with Family?"
+        android:backgroundTint="#FFFFFF"
+        android:onClick="cl2"
+        />
 
 </RelativeLayout>
